# ucx

./: Makefile.am  configure.ac  ucx.spec.in
bindings/go/: Makefile.am
bindings/go/src/ucx/: callbacks.go  context.go  endpoint.go  request.go  worker.go
contrib/: buildrpm.sh  rpmdef.sh.in
debian/: rules.in  ucx-cuda.install
examples/: Makefile.am  ucp_client_server.c  uct_hello_world.c
src/cuda/: Makefile.am  hello_cuda.h  hello_cuda_kernel.cu  nvcc_wrap.sh
src/tools/perf/: perftest.c  perftest_params.c
src/tools/perf/gda-ki/: Makefile.am  bw_benchmark.cu  gdaki_benchmark.h  gdaki_mem_handle.cu  gdaki_mem_handle.h  lat_benchmark.cu  libperf_cuda.h  nvcc_wrap.sh
src/ucp/: Makefile.am
src/ucp/am/: eager_multi.c  eager_single.c
src/ucp/api/: ucp.h
src/ucp/core/: ucp_am.c  ucp_am.h  ucp_context.c  ucp_context.h  ucp_device.c  ucp_ep.h  ucp_request.c  ucp_request.h  ucp_request.inl  ucp_types.h  ucp_worker.c  ucp_worker.h
src/ucp/proto/: proto.c  proto_am.c  proto_am.inl  proto_debug.c  proto_select.h
src/ucp/rma/: amo_sw.c  rma_sw.c
src/ucp/rndv/: proto_rndv.c  proto_rndv.h  rndv.c  rndv.h  rndv.inl  rndv_rtr.c
src/ucp/stream/: stream.h  stream_multi.c  stream_recv.c  stream_rndv.c  stream_send.c
src/ucp/tag/: eager_rcv.c  probe.c  tag_match.c  tag_match.inl  tag_recv.c
src/ucp/wireup/: select.c  wireup.c
src/ucs/config/: parser.c  parser.h
src/ucs/datastruct/: ucs_buffers_agent.h
src/uct/api/: uct.h  uct_def.h
src/uct/base/: uct_iface.c  uct_iface.h
src/uct/sm/self/: self.c
src/uct/tcp/: tcp_ep.c
test/gtest/: Makefile.am  configure.m4
test/gtest/cuda/: hello_cuda.cc
test/gtest/ucp/: test_ucp_am.cc  test_ucp_mmap.cc  test_ucp_stream.cc  test_ucp_worker.cc
test/gtest/uct/: test_event.cc  test_flush.cc  test_gdaki.cu  test_many2one_am.cc  test_mm.cc  test_p2p_am.cc  test_p2p_mix.cc  test_p2p_mix.h  test_peer_failure.cc  test_peer_failure.h  test_pending.cc  test_stats.cc  test_tag.cc
(+42 files in other folders)
